<resources>
    <string name="app_name" translatable="false"> بازرسی مدارس </string>
    <string name="toolbarlogin" translatable="false">ورود کاربر</string>
    <string name="txtusername" translatable="false">نام کاربری</string>
    <string name="txtpassord" translatable="false">رمز عبور</string>
    <string name="btnlogin" translatable="false">ورود</string>
    <string name="schoolname_" translatable="false">نام مدرسه :</string>
    <string name="school" translatable="false"> مدرسه</string>
    <string name="schoolcode_" translatable="false">کد مدرسه :</string>
    <string name="schoolcode" translatable="false">کد مدرسه</string>
    <string name="region_" translatable="false">منطقه آموزشی:</string>
    <string name="region" translatable="false">منطقه آموزشی</string>
    <string name="btnsendfile" translatable="false">ارسال</string>
    <string name="endins" translatable="false">پایان بازرسی</string>
    <string name="startins" translatable="false">شروع بازرسی</string>
    <string name="sendform" translatable="false">ارسال مدارک بازرسی</string>
    <string name="senderror" translatable="false">ارسال تخلفات بازرسی</string>
    <string name="toolbardetailschool" translatable="false">جزئیات مدرسه</string>
    <string name="send" translatable="false">ارسال</string>
    <string name="select" translatable="false">انتخاب فایل</string>
    <string name="explain" translatable="false">توضیحات</string>
    <string name="upload" translatable="false">بارگزاری</string>
    <string name="addfile" translatable="false">اضافه کردن فایل</string>
    <string name="txtsupport" translatable="false">پشتیبانی</string>
    <string name="txtcard" translatable="false">کارت شناسایی</string>
    <string name="toolbarsupport" translatable="false">پشتیبانی</string>
    <string name="ertebat" translatable="false">ارتباط با پشتیبانی :</string>
    <string name="exp" translatable="false">جهت پاسخگویی به سوالات مربوط به استفاده از نرم افزار به واحد انجمن اولیا و مربیان منطقه آموزش و پرورش خود مراجعه نمایید و یا با شماره های پشتیبانی تماس حاصل نمایید.</string>
    <string name="name_" translatable="false">نام :</string>
    <string name="name" translatable="false">نام</string>
    <string name="family_" translatable="false">نام خانوادگی :</string>
    <string name="family" translatable="false">نام خانوادگی</string>
    <string name="code" translatable="false">کد پرسنلی </string>
    <string name="code_" translatable="false">کد پرسنلی :</string>
    <string name="desc" translatable="false">توضیحات</string>
    <string name="desc_" translatable="false">توضیحات :</string>
    <string name="app_namesplash" translatable="false">سازمان دانش آموزی</string>
    <string name="app_namesplashtwo" translatable="false">اداره کل آموزش و پرورش شهر تهران</string>
    <string name="no1" translatable="false">021-66918785</string>
    <string name="no2" translatable="false">021-66918783</string>
    <string name="office_inspection" translatable="false">بازرسی شرکت</string>
    <string name="school_service_inspection" translatable="false">بازرسی سرویس مدارس</string>
    <string name="toolbarchoose" translatable="false">انتخاب بازرسی</string>
    <string name="officename_" translatable="false">نام شرکت :</string>
    <string name="officename" translatable="false">نام شرکت</string>
    <string name="insurance_" translatable="false">کد بیمه :</string>
    <string name="insurance" translatable="false">کد بیمه</string>
    <string name="economic_" translatable="false">کد اقتصادی :</string>
    <string name="economic" translatable="false">کد اقتصادی</string>
    <string name="phone_" translatable="false">تلفن شرکت :</string>
    <string name="phone" translatable="false">تلفن شرکت</string>
    <string name="officetype_" translatable="false">نوع کاربری :</string>
    <string name="officetype" translatable="false">نوع کاربری</string>
    <string name="address_" translatable="false">آدرس شرکت :</string>
    <string name="address" translatable="false">آدرس شرکت</string>
    <string name="submitoffice" translatable="false">ثبت اطلاعات بازرسی</string>
    <string name="toolbardetailoffice" translatable="false">جزئیات شرکت</string>
    <string name="formtitle" translatable="false">عنوان فرم</string>
    <string name="manager_" translatable="false">مدیر عامل :</string>
    <string name="manager" translatable="false">مدیر عامل</string>
    <string name="subno_" translatable="false">شماره ثبتی :</string>
    <string name="subno" translatable="false">شماره ثبتی </string>
    <string name="toolbaridcard" translatable="false">کارت شناسایی</string>
    <string name="toolbarlocation" translatable="false">محل شرکت</string>
    <string name="toolbarschlocation" translatable="false">محل مدرسه</string>
    <string name="schoolname" translatable="false">نام مدرسه</string>
    <string name="schaddress_" translatable="false">آدرس مدرسه :</string>
    <string name="schaddress" translatable="false">آدرس مدرسه</string>
    <string name="schexp" translatable="false">توضیحات</string>
    <string name="schexp_" translatable="false">توضیحات :</string>
    <string name="calculateprice" translatable="false">محاسبه مبلغ سرویس</string>
    <string name="scanqr" translatable="false">اسکن بارکد برچسب خودرو سرویس</string>
    <string name="toolbarcompleteins" translatable="false">تکمیل بازرسی</string>
    <string name="selectdays" translatable="false">انتخخاب تعداد روز ها</string>
    <string name="toolbarsenderror" translatable="false"> تخلفات بازرسی</string>
    <string name="toolbarcheckprice" translatable="false">محاسبه مبلغ سرویس</string>
    <string name="calculate" translatable="false">محاسبه قیمت</string>
    <string name="price" translatable="false">مبلغ</string>
    <string name="submiterror" translatable="false">ثبت تخلف</string>
    <string name="backmain" translatable="false">بازگشت</string>
    <string name="toolbarsendform" translatable="false">ارسال مدارک بازرسی</string>
    <string name="sub_er_school" translatable="false"> مدارس غیر ثبتی در سرویس</string>
    <string name="toolbarnonregsch" translatable="false">مدارس غیر ثبتی</string>
    <string name="submit" translatable="false">ثبت مدرسه</string>
    <string name="checkcompany" translatable="false">بررسی شرکت پیمانکاری</string>
    <string name="toolbarcheckcompany" translatable="false">بررسی شرکت پیمانکاری</string>
    <string name="checktrue" translatable="false">بررسی شرکت</string>
    <string name="name_or_subcode" translatable="false">نام شرکت یا کد ثبتی</string>
    <string name="toolbardetailoffsch" translatable="false">جزئیات شرکت پیمانکار</string>
    <string name="school_uniform_inspection" translatable="false">بازرسی لباس مدارس</string>
    <string name="sendschform" translatable="false">ارسال پرسش نامه مدارس</string>
    <string name="sendparentform" translatable="false">ارسال پرسش نامه اولیا</string>
    <string name="formname" translatable="false">عنوان فرم</string>
    <string name="toolbarsendparentform" translatable="false">پرسش نامه لباس فرم سطح اولیا</string>
    <string name="toolbarsendschoolform" translatable="false">پرسش نامه لباس فرم سطح مدرسه</string>
    <string name="sweing" translatable="false">تولیدی</string>
    <string name="cloth" translatable="false">لباس فرم</string>
    <string name="service" translatable="false">سرویس </string>
    <string name="office" translatable="false"> پیمانکار</string>
    <string name="bufe" translatable="false">بوفه</string>
    <string name="sazman" translatable="false">سازمان دانش آموزی</string>
    <string name="fooddeliver" translatable="false">  پخش تغذیه</string>
    <string name="toolbardetailproform" translatable="false">جزئیات تولیدی</string>
    <string name="proname" translatable="false">نام تولیدی</string>
    <string name="proname_" translatable="false">نام تولیدی :</string>
    <string name="promanager_" translatable="false">مدیریت :</string>
    <string name="promanager" translatable="false">مدیریت</string>
    <string name="proaddress_" translatable="false">آدرس :</string>
    <string name="proaddress" translatable="false">آدرس</string>
    <string name="prophone" translatable="false">تلفن تولیدی</string>
    <string name="prophone_" translatable="false">تلفن تولیدی :</string>
    <string name="formname1" translatable="false">تولیدی متناسب با ظرفیت تولید سفارش دریافت کرده است؟</string>
    <string name="formname2" translatable="false">تولیدی مطابق قرارداد سفارشات را تحویل گرفته است؟</string>
    <string name="formname3" translatable="false">تولیدی بنر قیمت را در معرض دید اولیا قرار داده است ؟</string>
    <string name="formname4" translatable="false">تولیدی همکاری لازم جهت امور بازرسی را انجام داده است ؟</string>
    <string name="formname5" translatable="false">تولیدی استاندارد ای لازم در خصوص دوخت رعایت کرده است؟</string>
    <string name="formname6" translatable="false">تولیدی سفارشات خود را به غیر وادار کرده است ؟</string>
    <string name="formname7" translatable="false">تولیدی سفارشی خارج از مسیر سامانه لباس فرم دریافت کرده است ؟</string>
    <string name="sendproform" translatable="false">ارسال پرسش نامه تولیدی</string>
    <string name="submitbuffet" translatable="false">ثبت اطلاعات بوفه</string>
    <string name="sendformbuffet" translatable="false">فرم ارزیابی بوفه</string>
    <string name="manufactures" translatable="false">شرکت های تولید کننده</string>
    <string name="bfname_" translatable="false">نام  :</string>
    <string name="bfname" translatable="false">نام</string>
    <string name="mobile_" translatable="false">تلفن همراه :</string>
    <string name="mobile" translatable="false">تلفن همراه</string>
    <string name="number_" translatable="false">شماره ثبت :</string>
    <string name="number" translatable="false">شماره ثبت</string>
    <string name="distance2" translatable="false">عرض</string>
    <string name="distance3" translatable="false">ارتفاع</string>
    <string name="distance1" translatable="false">طول</string>
    <string name="distance_" translatable="false">ابعاد :</string>
    <string name="date_" translatable="false">تاریخ :</string>
    <string name="date" translatable="false">----/--/--</string>
    <string name="toolbarbuffetinfo" translatable="false">اطلاعات بوفه</string>
    <string name="toolbarsendformvalue" translatable="false">فرم ارزیابی</string>
    <string name="toolbarsubmanufacture" translatable="false">اطلاعات شرکت تولید کننده</string>
    <string name="factoryname_" translatable="false">نام شرکت :</string>
    <string name="factoryname" translatable="false">نام شرکت</string>
    <string name="Distributor_" translatable="false">توزیع کننده :</string>
    <string name="Distributor" translatable="false">توزیع کننده</string>
    <string name="brand" translatable="false">برند</string>
    <string name="brand_" translatable="false">برند :</string>
    <string name="submitfactory" translatable="false">ثبت تولید کننده</string>
    <string name="gender_" translatable="false">جنسیت :</string>
    <string name="gender" translatable="false">جنسیت</string>
    <string name="type_" translatable="false">مقطع :</string>
    <string name="type" translatable="false">مقطع</string>
    <string name="sendphoto" translatable="false">ارسال عکس</string>
    <string name="comeback" translatable="false">بازگشت</string>
    <string name="schname_" translatable="false">نام مدرسه :</string>
    <string name="schname" translatable="false">نام مدرسه</string>
    <string name="schcode_" translatable="false">کد مدرسه :</string>
    <string name="schcode" translatable="false">کد مدرسه</string>
    <string name="gcode_" translatable="false">کد رهگیری :</string>
    <string name="gcode" translatable="false">کد رهگیری</string>
    <string name="pay_" translatable="false">مبلغ :</string>
    <string name="pay" translatable="false">مبلغ</string>
    <string name="ddd" translatable="false">تاریخ</string>
    <string name="contract" translatable="false">کنترل قرارداد پیمانکار</string>
    <string name="gcode_ofcode_schcode" translatable="false">کد مورد نظر را وارد کنید...</string>
</resources>